--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projetos Pessoais</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -25,7 +26,7 @@
     header {
       background: var(--primary);
       color: white;
-      padding: 2rem 1rem 1.2rem 1rem;
+      padding: 1.5rem 1rem;
       text-align: center;
       box-shadow: 0 2px 8px rgba(67,160,71,0.10);
       letter-spacing: 1px;
@@ -33,12 +34,11 @@
     header h1 {
       margin: 0;
       font-weight: 600;
-      font-size: 2rem;
-      letter-spacing: 1px;
+      font-size: 1.8rem;
     }
     .container {
-      max-width: 700px;
-      margin: 2rem auto;
+      max-width: 900px;
+      margin: 1.5rem auto;
       padding: 1rem;
       background: var(--card-bg);
       border-radius: var(--radius);
@@ -48,7 +48,7 @@
       display: flex;
       align-items: center;
       gap: 0.5em;
-      margin-bottom: 1.5em;
+      margin-bottom: 1em;
       background: var(--primary-light);
       border-radius: var(--radius);
       padding: 0.5em 1em;
@@ -61,19 +61,19 @@
       border: none;
       background: transparent;
       width: 100%;
-      font-size: 1.1em;
+      font-size: 1em;
       padding: 0.5em 0;
       outline: none;
     }
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 1.2em;
+      gap: 1em;
     }
     .card {
       background: var(--card-bg);
       border-radius: var(--radius);
-      padding: 1.2em 1em;
+      padding: 1em;
       box-shadow: var(--shadow);
       cursor: pointer;
       transition: transform var(--transition), box-shadow var(--transition);
@@ -81,7 +81,8 @@
       flex-direction: column;
       align-items: center;
       border: 1px solid #f0f0f0;
-      min-height: 110px;
+      min-height: 100px;
+      text-align: center;
     }
     .card:hover {
       transform: translateY(-4px) scale(1.04);
@@ -102,8 +103,8 @@
     }
     .btn {
       display: inline-block;
-      margin-top: 1.5em;
-      padding: 0.7em 1.4em;
+      margin-top: 1.2em;
+      padding: 0.6em 1.2em;
       background: var(--primary);
       color: white;
       border: none;
@@ -119,13 +120,12 @@
     }
     audio {
       width: 100%;
-      margin-top: 1.2em;
+      margin-top: 1em;
       border-radius: 8px;
-      background: #f0f0f0;
     }
     .fav {
       float: right;
-      font-size: 2em;
+      font-size: 1.8em;
       cursor: pointer;
       color: #ddd;
       transition: color 0.2s;
@@ -145,15 +145,17 @@
       color: #fff;
       padding: 0.2em 0.6em;
       border-radius: 5px;
-      font-size: 0.85em;
+      font-size: 0.75em;
       white-space: nowrap;
       opacity: 0.95;
       z-index: 2;
     }
     @media (max-width: 600px) {
+      header h1 { font-size: 1.5rem; }
       .container { padding: 0.5em; }
-      .grid { gap: 0.7em; }
-      .card { padding: 0.9em 0.5em; }
+      .search-bar { flex-direction: column; align-items: stretch; }
+      .grid { grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 0.7em; }
+      .card { padding: 0.8em; font-size: 0.9em; }
     }
   </style>
 </head>
@@ -168,8 +170,10 @@
     <i class="fa fa-search"></i>
     <input type="text" id="searchInput" placeholder="Buscar projetos ou categorias...">
   </div>
+  
   <div id="categories" class="grid"></div>
   <div id="projects" class="grid hidden"></div>
+  
   <div id="details" class="hidden">
     <span id="favBtn" class="fav" title="Favoritar">&#9733;</span>
     <img id="projectImage" class="project-img" src="" alt="Imagem do Projeto">
@@ -181,7 +185,6 @@
 </div>
 
 <script>
-  // Ícones para cada categoria (FontAwesome)
   const catIcons = {
     "Desenvolvimento Pessoal": "fa-user-astronaut",
     "Educação": "fa-book-open",
@@ -195,18 +198,10 @@
   };
 
   const categories = Object.keys(catIcons);
-
   const projects = {
-    "Desenvolvimento Pessoal": [
-      { title: "Desafio de Gratidão", img: "https://via.placeholder.com/300", desc: "Um desafio de 30 dias.", audio: "audio1.mp3" }
-    ],
-    "Educação": [
-      { title: "Resumo de Livros", img: "https://via.placeholder.com/300", desc: "Crie resumos.", audio: "audio2.mp3" }
-    ],
-    "Carreira": [
-      { title: "Plano de Carreira", img: "https://via.placeholder.com/300", desc: "Estruture sua trajetória.", audio: "audio3.mp3" }
-    ]
-    // Adicione mais conforme quiser.
+    "Desenvolvimento Pessoal": [{ title: "Desafio de Gratidão", img: "https://via.placeholder.com/300", desc: "Um desafio de 30 dias.", audio: "audio1.mp3" }],
+    "Educação": [{ title: "Resumo de Livros", img: "https://via.placeholder.com/300", desc: "Crie resumos.", audio: "audio2.mp3" }],
+    "Carreira": [{ title: "Plano de Carreira", img: "https://via.placeholder.com/300", desc: "Estruture sua trajetória.", audio: "audio3.mp3" }]
   };
 
   const favs = JSON.parse(localStorage.getItem('favs')) || [];
@@ -284,7 +279,6 @@
 
   searchInput.addEventListener('input', function() {
     const val = this.value.toLowerCase();
-    // Filtra categorias e projetos
     const filteredCats = categories.filter(cat => cat.toLowerCase().includes(val));
     renderCategories(filteredCats);
     if (!val) {
