--- a/index.html
+++ b/index.html
@@ -1,293 +1,121 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projetos Pessoais</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    :root {
-      --primary: #43a047;
-      --primary-light: #e8f5e9;
-      --bg: #f8fafc;
-      --card-bg: #fff;
-      --shadow: 0 4px 16px rgba(60,60,60,0.07);
-      --radius: 12px;
-      --transition: 0.18s cubic-bezier(.4,0,.2,1);
-    }
-    * { box-sizing: border-box; }
-    body {
-      font-family: 'Inter', Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: var(--bg);
-      color: #222;
-    }
-    header {
-      background: var(--primary);
-      color: white;
-      padding: 1.5rem 1rem;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(67,160,71,0.10);
-      letter-spacing: 1px;
-    }
-    header h1 {
-      margin: 0;
-      font-weight: 600;
-      font-size: 1.8rem;
-    }
-    .container {
-      max-width: 900px;
-      margin: 1.5rem auto;
-      padding: 1rem;
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-    }
-    .search-bar {
-      display: flex;
-      align-items: center;
-      gap: 0.5em;
-      margin-bottom: 1em;
-      background: var(--primary-light);
-      border-radius: var(--radius);
-      padding: 0.5em 1em;
-    }
-    .search-bar i {
-      color: var(--primary);
-      font-size: 1.2em;
-    }
-    input[type="text"] {
-      border: none;
-      background: transparent;
-      width: 100%;
-      font-size: 1em;
-      padding: 0.5em 0;
-      outline: none;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 1em;
-    }
-    .card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      padding: 1em;
-      box-shadow: var(--shadow);
-      cursor: pointer;
-      transition: transform var(--transition), box-shadow var(--transition);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      border: 1px solid #f0f0f0;
-      min-height: 100px;
-      text-align: center;
-    }
-    .card:hover {
-      transform: translateY(-4px) scale(1.04);
-      box-shadow: 0 8px 24px rgba(67,160,71,0.13);
-      border-color: var(--primary-light);
-    }
-    .cat-icon {
-      font-size: 2em;
-      margin-bottom: 0.5em;
-      color: var(--primary);
-    }
-    .hidden { display: none; }
-    .project-img {
-      width: 100%;
-      border-radius: var(--radius);
-      margin-bottom: 1em;
-      box-shadow: 0 2px 8px rgba(60,60,60,0.07);
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 1.2em;
-      padding: 0.6em 1.2em;
-      background: var(--primary);
-      color: white;
-      border: none;
-      border-radius: var(--radius);
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 1em;
-      transition: background 0.12s;
-      box-shadow: 0 2px 8px rgba(67,160,71,0.07);
-    }
-    .btn:hover {
-      background: #388e3c;
-    }
-    audio {
-      width: 100%;
-      margin-top: 1em;
-      border-radius: 8px;
-    }
-    .fav {
-      float: right;
-      font-size: 1.8em;
-      cursor: pointer;
-      color: #ddd;
-      transition: color 0.2s;
-      margin-left: 0.5em;
-      position: relative;
-    }
-    .fav.active {
-      color: gold;
-      text-shadow: 0 1px 6px #fae16f70;
-    }
-    .fav[title]:hover::after {
-      content: attr(title);
-      position: absolute;
-      left: 110%;
-      top: 0;
-      background: #222;
-      color: #fff;
-      padding: 0.2em 0.6em;
-      border-radius: 5px;
-      font-size: 0.75em;
-      white-space: nowrap;
-      opacity: 0.95;
-      z-index: 2;
-    }
-    @media (max-width: 600px) {
-      header h1 { font-size: 1.5rem; }
-      .container { padding: 0.5em; }
-      .search-bar { flex-direction: column; align-items: stretch; }
-      .grid { grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 0.7em; }
-      .card { padding: 0.8em; font-size: 0.9em; }
-    }
-  </style>
-</head>
-<body>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
+    <link
+      rel="stylesheet"
+      as="style"
+      onload="this.rel='stylesheet'"
+      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
+    />
 
-<header>
-  <h1>Projetos Pessoais</h1>
-</header>
+    <title>Stitch Design</title>
+    <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
-<div class="container">
-  <div class="search-bar">
-    <i class="fa fa-search"></i>
-    <input type="text" id="searchInput" placeholder="Buscar projetos ou categorias...">
-  </div>
-  
-  <div id="categories" class="grid"></div>
-  <div id="projects" class="grid hidden"></div>
-  
-  <div id="details" class="hidden">
-    <span id="favBtn" class="fav" title="Favoritar">&#9733;</span>
-    <img id="projectImage" class="project-img" src="" alt="Imagem do Projeto">
-    <h2 id="projectTitle"></h2>
-    <p id="projectDescription"></p>
-    <audio id="projectAudio" controls></audio>
-    <button class="btn" onclick="goBack()"><i class="fa fa-arrow-left"></i> Voltar</button>
-  </div>
-</div>
-
-<script>
-  const catIcons = {
-    "Desenvolvimento Pessoal": "fa-user-astronaut",
-    "Educação": "fa-book-open",
-    "Carreira": "fa-briefcase",
-    "Criatividade": "fa-lightbulb",
-    "Saúde": "fa-heartbeat",
-    "Viagens": "fa-plane-departure",
-    "Estilo de Vida": "fa-leaf",
-    "Comunicação": "fa-comments",
-    "Espiritualidade": "fa-spa"
-  };
-
-  const categories = Object.keys(catIcons);
-  const projects = {
-    "Desenvolvimento Pessoal": [{ title: "Desafio de Gratidão", img: "https://via.placeholder.com/300", desc: "Um desafio de 30 dias.", audio: "audio1.mp3" }],
-    "Educação": [{ title: "Resumo de Livros", img: "https://via.placeholder.com/300", desc: "Crie resumos.", audio: "audio2.mp3" }],
-    "Carreira": [{ title: "Plano de Carreira", img: "https://via.placeholder.com/300", desc: "Estruture sua trajetória.", audio: "audio3.mp3" }]
-  };
-
-  const favs = JSON.parse(localStorage.getItem('favs')) || [];
-
-  const catContainer = document.getElementById('categories');
-  const projContainer = document.getElementById('projects');
-  const detailsContainer = document.getElementById('details');
-  const favBtn = document.getElementById('favBtn');
-  const searchInput = document.getElementById('searchInput');
-
-  let currentProj = null;
-
-  function renderCategories(filteredCats = categories) {
-    catContainer.innerHTML = '';
-    filteredCats.forEach(cat => {
-      const div = document.createElement('div');
-      div.className = 'card';
-      div.innerHTML = `<i class="fa ${catIcons[cat]} cat-icon"></i>${cat}`;
-      div.onclick = () => showProjects(cat);
-      catContainer.appendChild(div);
-    });
-  }
-  renderCategories();
-
-  function showProjects(category) {
-    catContainer.classList.add('hidden');
-    projContainer.innerHTML = '';
-    projContainer.classList.remove('hidden');
-    (projects[category] || []).forEach(proj => {
-      const div = document.createElement('div');
-      div.className = 'card';
-      div.innerHTML = `<i class="fa fa-folder-open cat-icon" style="font-size:1.5em;"></i>${proj.title}`;
-      div.onclick = () => showDetails(proj);
-      projContainer.appendChild(div);
-    });
-  }
-
-  function showDetails(proj) {
-    currentProj = proj;
-    projContainer.classList.add('hidden');
-    detailsContainer.classList.remove('hidden');
-    document.getElementById('projectImage').src = proj.img;
-    document.getElementById('projectTitle').innerText = proj.title;
-    document.getElementById('projectDescription').innerText = proj.desc;
-    document.getElementById('projectAudio').src = proj.audio;
-    updateFav();
-  }
-
-  function goBack() {
-    detailsContainer.classList.add('hidden');
-    projContainer.classList.add('hidden');
-    catContainer.classList.remove('hidden');
-  }
-
-  favBtn.onclick = () => {
-    const idx = favs.findIndex(f => f.title === currentProj.title);
-    if (idx > -1) {
-      favs.splice(idx, 1);
-    } else {
-      favs.push(currentProj);
-    }
-    localStorage.setItem('favs', JSON.stringify(favs));
-    updateFav();
-  };
-
-  function updateFav() {
-    if (favs.find(f => f.title === currentProj.title)) {
-      favBtn.classList.add('active');
-      favBtn.title = "Remover dos favoritos";
-    } else {
-      favBtn.classList.remove('active');
-      favBtn.title = "Favoritar";
-    }
-  }
-
-  searchInput.addEventListener('input', function() {
-    const val = this.value.toLowerCase();
-    const filteredCats = categories.filter(cat => cat.toLowerCase().includes(val));
-    renderCategories(filteredCats);
-    if (!val) {
-      catContainer.classList.remove('hidden');
-      projContainer.classList.add('hidden');
-      detailsContainer.classList.add('hidden');
-    }
-  });
-</script>
-
-</body>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+  </head>
+  <body>
+    <div
+      class="relative flex size-full min-h-screen flex-col bg-white justify-between group/design-root overflow-x-hidden"
+      style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif;'
+    >
+      <div>
+        <div class="flex items-center bg-white p-4 pb-2 justify-between">
+          <h2 class="text-[#181111] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pl-12">Stairs</h2>
+          <div class="flex w-12 items-center justify-end">
+            <button
+              class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 bg-transparent text-[#181111] gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0"
+            >
+              <div class="text-[#181111]" data-icon="Plus" data-size="24px" data-weight="regular">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+                  <path d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"></path>
+                </svg>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="@container">
+          <div class="@[480px]:px-4 @[480px]:py-3">
+            <div
+              class="w-full bg-center bg-no-repeat bg-cover flex flex-col justify-end overflow-hidden bg-white @[480px]:rounded-xl min-h-[218px]"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAVTAH_WtNI45vMAPyOTK8lAWCGN5gLyRtvg92OXONMgvA3TVIdrfmqhN5bwrHz_lHCOv63n9zS_MLlfjj22HJxMax0T_YrXtbiaPtLQS8pRKXWAdjMf-AzMmwSEOvuMmhXB64bGKwnmcR0LEnJatUXjcckR5m7I7iKj1Ilk7_Krsxux92goQbYemUnma3FqHh4iLFgVDqESKy9o5mLHuRF2lcu7MgKFS0xQIH5RJ2w63lhIB2YeEh9ncIvL4-GLDTzcHxLCk9lIw");'
+            ></div>
+          </div>
+        </div>
+        <h2 class="text-[#181111] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Categorias</h2>
+        <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDw9ywUxvE1oXi1SRyDpyhsGXOtmRdX_1TLALPvWTq_MJ4FspgiPktgrX6QaeFp_FeD3Npaz6XcH-Auh5Xhq2-ZH56jdQPKU9oPa8jRNIGZBW5rECYq3qsQgUUbh9_rfPerjrv6GL5udwkluB8Mb1XJm-AsVrTof63njla9V5JJOOEcPBh2pilfG0GOp-NRBNUxnBt3Hi0vks5vVXCOTbJLdhlJtiFRgQNJT0vYRzgdoQeppvBBHMfGqO9rwqQOub_HOVOgJTobNQ");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Personal Growth</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAjnS6h5EcK1X2lgqvO7ukGEIOAXsjnIjaw6er9S3IwC1dfgeIAMUnEopWdDgnaZa0MX2Mr17xQ7TOmQTOafv6mlxFSjQI8pd4HomNIgUHlJ_2-i2pFgvgqPqUvCYTMKJWG-LZsPJDXJ3UZ1MJyd8dtQjgfNM6Ch6nU8qs2VCpA-C5PQnEPVqanVBju1w7SJLa1bmehJm3_S3wzAlUghxrxDDsyOAMsS9aDq3QEMBiXAvJk4yGSi_JeRPLtDCTI3IH0u4PY3slbrw");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Education</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAIbkxYMV0W_M0-CDqIG1YksYPoVjRfVS_-QpZZ-apfEEXf9TlsnnX4PCs7PUF7MzaeZnQFRzyAxl5UgRsld6YO4S4hAKQN9085uZ1ZUyx5pCdaFe4RxpCnrb3xlyjYbooRZ6MhSZFsywM2P6eqyE9VTDSCnPjqpnykoQBLdMSISdF24IEXo7MOt0wilbvUOl89x7TF_QrHQmLTje9alZd9N7ZuAlECbkKfRIYOR82EAD7JVScDljYvhKGoPSaSC6Y-FxsgJMrrrA");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Career</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDc7TYytLyQAfwVS04LhcNk8L51KfnHix0eCH6YPxwjexjOhXWmwH1XcZ6W7qblJQ37VcSS5RXHlddR-g0vlEYkF5McsaLyW11Y6FptjIMbnJqe6CSn1Yw7Zn8eMvqgTukj_0eVStlnuP97lJuZjeZtcmCHxS-JLykrlDlfhrKdkOEhK0Gu8pNa4DbCYc8ic6qFTmjafSM_y86KAUqC0RNmrIOxhSjsJ25OVZp3STb48EVxqp4SVsDsmdNJ0AyzVev1H_VEWhaLng");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Creativity</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDfNxD1ArHDF8VQ46bHSbfLkUIaUq5vsAiY7srhDr_h7_6T6SWiSnK3LTP50tDfalQDosmO_DWnUCNPPb3ZaiDI_GTrUdZwk8PabTDWPT1UhFjXeP3ZusaSFmEeL0Nd_uGXQ0mphQnHsTlxON5N7Q3ezSkUSfYz6vRsOP762J8hxX_SfucPQjiQhEnwatVwLNM-fLBrj6e5gGucX5UZIPyJom3U2YKse0x-I5lafz7fNqM6jpKbC59D_YRu4n5FdltpydanPLXpbg");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Health</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuD59Vj7uBjGYRN_wwjd8h-xRIaQMqg8fIFLan-pBZJCfAnLSxJf0a5yAXBNH0tsAd-EzsI740JA8-tb77NAlbHWwL5lwEUIW6-Cxaz1OxxkYEzBSAGX9peETduVdu_Lor188jZjLHtBgOpBW34nlM5Fyyxykdkuc1FigTG0TSk1qkg8CEUEvEYA8z-krz0b4QHVNIphS5w6aJwtBW7ylslc_fJZEdpqwXfWcqgaZhZo2lSQ-Gw4azyRcllo59UiEqvPoOKvlWnklw");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Travel</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBlcE0QJOzMPtfCvVNtYdCAkYf1BXqNljIc4CD75tXm9AFjYmjE0x0u-VOc67seHmfZjzDoE1ohnk-Trau2_0aH6-T_c8p7sa9gtuIaRWa0S4WX-cupEPq9DbS5SInZp2gbTtcFrA0zgUSAUnbV9Ut936g7z1IkVo07dTo1NwIFphADkTwQs9mtuex9d6M7_7o3zK6VRCEpBobAXMTd20FXj4x-i6I7N-dKsUcRgf0nhYsSGmY5Hc50KauRubnJG_22svcFMoW6sA");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Lifestyle</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBH3_7iKdvy6GN-_eLPeP-8T5EZEaHtmMEeRC8239GFcaa3v2cspLmkk9klksPnVhTrtLnaWhg-Y4JIkNAL2MZvvw_MxDDHJYLrfl1Dh4lvVQPD5SN19KzWepadUihzOgGb_KO9V0pWa6Has9pWV01V5JjcTEiN99HAOsWiCyOyOVNKotS_PzdwIe3PQri_fFrzJn47tpUenDZu95iU2g6kwhm_EbMmvxgio1nwgqATTBXF-LdD8IR7Wb-x_WXEGz4jpcYf-fcbjw");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Social Media</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBcCEPHi4WGMhPMLrLkE6IXe1kIujjgACXL7oTNdPFwOaAQvr3RK_axcJw2j_lXgGwCnefTLZOBbr6BdR0aRroaNzZAzbdcc5gBYB9n6cDC2XPEvS5ki01OStEGmnuIXhw0cagkIhHHLyMuZ2RbNC7LTwg4gaZG_LHI8LKrmdUaiCYzTJ-ioi6e8Xi7rpt_fnNuRDsdCEGrmVizsS7CvJW6g5aK-3C_U8He9PiFJzvL89SRd7t0nHwtMvt0O6zSIOR4vYCo73pqcA");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Spirituality</h2>
+          </div>
+          <div class="flex flex-1 gap-3 rounded-lg border border-[#e5dcdc] bg-white p-4 items-center">
+            <div
+              class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg w-10 shrink-0"
+              style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCAjx8yGBFBzFCJHRU094SyNz-kAcMi8FuJSNkVrx4UJ8mXIFKzZ_1hJEvVTSbMJv1XQEdMFBHHZsA-sByK3pnPRJUDtvnRE9xFM23uvjALCw6uwLVej59vIbjLkKG4UiwqXBhbOfkP53da_ilWSrV-QRaNRA00D0ys-Chs9TmTSa5b-y1k7HbjsagHkCJYsMOzYobRYMlQ-AHkzKaj3aO_MeeFXm7L0ocCzGxgPXDdZi3YB_3JVygf2NnyvrHQL762xTtU4VoHaA");'
+            ></div>
+            <h2 class="text-[#181111] text-base font-bold leading-tight">Finance</h2>
+          </div>
+        </div>
+      </div>
+      <div><div class="h-5 bg-white"></div></div>
+    </div>
+  </body>
 </html>
